[tool.poetry]
name = "repl_nix_advanced-python-for-cybersecurity"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.10.1"
shodan = "^1.28.0"
pandas = "^2.0.1"
passlib = "^1.7.4"
requests = "^2.28.2"
scapy = "^2.5.0"
paramiko = "^3.1.0"
pycryptodomex = "^3.17"
dnspython = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
